--- a/playing_the_game/index.html
+++ b/playing_the_game/index.html
@@ -257,35 +257,49 @@
 	如果某個怪物可以擲二次 d6 傷害骰，並取其最好的結果，則它會寫成 <b>高[2d6]</b>。<b>高[ ]</b>代表著「取高」，同樣的，<b>低[ ]</b>代表著「取低」。因此 <b>低[3d10]</b>代表著「擲d10骰三次，並取其最低的結果作為傷害。」</p>
 
 <h3>治療</h3>
-<p class="NoIndent">There are two sources of healing in Dungeon World: medical aid and the passage of time.</p>
-<p>Medical aid, both magical and mundane, heals damage according to the move or item used. Some moves may fully replenish HP while others heal just enough to keep someone standing through a fight.</p>
-<p>Whenever a character spends some time resting without doing anything to aggravate their wounds they heal. The amount of healing is described in the applicable moves: Make Camp for a night in a dangerous area, Recover for stays in civilization.</p>
-<p>No matter the source of the healing a character’s HP can never increase above their maximum.</p>
+<p class="NoIndent">在地城世界中有兩種治療方法：醫療照護、以及任時間流逝自然恢復。</p>
+<p>
+	無論是透過魔法或尋常手段，醫療照護都夠根據使用的動作或道具來治療傷害。某些動作能夠使生命值完全恢復，而某些動作則只能把生命值恢復到剛好足以撐過一場苦戰的程度。</p>
+<p>每當某個角色花了一些時間休息，且沒有做出任何會加劇他們傷勢的行為，那麼他們就可以治療傷勢。透過治療恢復的生命值將依據使用動作中的說明而定：若在危險區域過夜的話則使用紮營動作，待在文明世界中休息則使用恢復動作。</p>
+<p>無論使用什麼方式治療，角色的生命值永遠不會因此增加到超過他們的最大生命值。</p>
 
 <h3>死亡</h3>
-<p class="NoIndent">Death stalks the edges of every battle. A character who is reduced to 0 HP immediately takes his Last Breath. Death comes for commoner and king alike—no stat is added to the Last Breath roll.</p>
-<p>No one knows what lies beyond the Black Gates of Death, but it is said that many secrets of the mortal plane are laid bare in the land of Death’s dominion. When you die, you might just see them.</p>
-<p>Death offers bargains to some, from the simple to the costly. Death is capricious and may ask a favor in the future or exact a toll. He may demand a sacrifice or ask for something strange and seemingly innocent. Death’s whim cannot be predicted.</p>
-<p>Depending on the outcome of the Last Breath the character may become stable. A stable character stays at 0 HP but is alive and unconscious. If they receive healing they regain consciousness and may return to battle or seek safety. If a stable character takes damage again they draw their Last Breath once more and return to face Death.</p>
+<p class="NoIndent">
+	死亡潛伏在每一場戰鬥的邊緣。一名生命值被減少至 0 的角色必須立刻進行臨死一息動作。死亡的降臨並不分貧富貴賤──沒有任何數值能被加到臨死一息的擲骰中。</p>
+<p>
+	沒有人知道那通往死亡國度的漆黑大門之後坐落著什麼樣的景象，但根據傳說，凡俗位面中的眾多秘密在死神的領地中都將暴露無遺。當你死去，或許你就能一賭其容。</p>
+<p>
+	死神有時會對某些人物提出交易，有些輕如鵝毛、有些則重如泰山。死神反覆無常，祂可能會要求你在未來幫他辦點事、或是當場支付代價。祂可能會強行索求某種犧牲、或僅僅是要求某個奇怪或幾乎無害的事物。沒有人能預測死神的念頭。</p>
+<p>
+	取決臨死一息的結果，角色的傷勢可能會變得穩定。一名傷勢穩定的角色將維持 0 點生命值的狀態，儘管還沒有恢復意識，但終究倖存了下來。如果他們接受治療，他們將恢復意識，並得以立即重回戰場或找尋庇護。如果一名傷勢穩定的角色不幸再次受到傷害，那麼他必須再進行一次臨死一息的擲骰，重新面對死亡。</p>
 
 <h4>死亡之後</h4>
-<p class="NoIndent">Being an adventurer isn’t easy—it’s cold nights in the wild and sharp swords and monsters. Sooner or later, you’re going to make that long walk to the Black Gates and give up the ghost. That doesn’t mean you have to give it the satisfaction of sticking around. Death, in its way, is just another challenge to conquer. Even dead adventurers can rise again.</p>
-<p>If your character dies you can ask the GM and the other players to try and resurrect you. The GM will tell them what it will cost to return your poor, dead character to life. If you fulfill the GM’s conditions the character is returned to life. The Resurrection spell is a special case of this: the magic of the spell gives you an easier way to get a companion back, but the GM still has a say.</p>
-<p>No matter the prospects of resurrection for now you make a new character. Maybe a hireling becomes a full-fledged adventurer worthy of a whole share and a part in the real action. Maybe the characters in the party find a new friend in a steading, willing to join them. Maybe your character had a vengeful family member who now seeks to take up their blades and spells to make right what happened. In any case, make your new character as you normally would at level 1. If your original character returns to life you can play either character, switching between them as you please (so long as it makes sense).</p>
-<p>GM, when you tell the players what needs to be done to bring their comrade back, don’t feel like it has to derail the flow of the current game. Weave it in to what you know of the world. This is a great opportunity to change focus or introduce an element you’ve been waiting to show off. Don’t feel, either, that it has to be some great and epic quest. If the character died at the end of a goblin pike, maybe all it takes is an awkward walk home and a few thousand gold pieces donated to a local temple. Think about the ramifications of such a charitable act and how it might affect the world. Remember: Death never forgets a soul stolen from his realm.</p>
+<p class="NoIndent">
+	身為冒險者可不容易──冒險總是意味著荒野中的冷夜、鋒寒利刃、以及可怖醜惡的怪物。或早或晚，你都將踏上通往那座漆黑大門的漫長旅程，嚥下最後一口氣。然而，這並不代表你就必須止步於此。從另一個角度來看，死亡也不過就是另一個等待著被你克服的挑戰。冒險者即使逝去，仍有機會重新崛起。</p>
+<p>
+	如果你的角色死去，你可以請求GM和其他玩家嘗試讓你復活。GM將告訴他們若要讓你那可悲死去的角色復活，他們必須付出什麼樣的代價。如果你們確實滿足了GM開出的條件，則該角色將得以重獲新生。牧師法術中的復活術是個特例：這個法術的魔法為你提供了一個更簡單的方法來帶回你們的同伴，但GM對此仍然保有發言權。</p>
+<p>
+	無論你是否有機會復活自己的角色，至少現在，你得創造一個新的角色才行。或許其中一名雇工終於成為了訓練完善的冒險者，值得與大家共享冒險的戰利品，並參與加入真正的冒險當中。也許冒險團隊在農莊中找到了一名願意加入他們的新朋友、又或者你逝去的角色其實有一位發誓為親人報仇雪恨的家族成員，並已經準備好他的寶劍或法術以糾正過去發生的一切。無論如何，你都必須按照你在 1 級時的正常程序創造出你的新角色。如果你們成功復活了你原本死掉的角色，那麼你可以選擇遊玩他們之中的任意一個，並隨你的意思在他們之間切換（只要合理即可）。</p>
+<p>
+	至於GM，當你告訴玩家們該做些什麼才能帶回他們死去的戰友時，不要覺得這必須中斷當前故事的發展，而是把握機會，把這些事件編入你所知的世界當中。這同時也是個大好機會，讓你得以轉變故事的焦點、或導入你一直期待呈現的劇情要素。同樣的，不要覺得玩家們非得經歷某種盛大的史詩級任務不可。如果角色只是犬死在一頭哥布林的長矛尖端，那或許玩家們要做的就只是尷尬地返鄉，並奉獻數千枚金幣給當地寺廟就好。思考一下像這樣的慈善行為會帶來什麼樣的後果，以及它將如何影響這個世界。記住：死神永遠不會忘記那些從祂國度中被偷走的靈魂。</p>
 
 <h3>異常狀態 (Debilities)</h3>
-<p class="NoIndent">Losing HP is a general thing, it’s getting tired, bruised, cut, and so on. Some wounds are deeper though. These are debilities.</p>
-<p><strong>Weak (STR):</strong> You can’t exert much force. Maybe it’s just fatigue and injury, or maybe your strength was drained by magic.</p>
-<p><strong>Shaky (DEX):</strong> You’re unsteady on your feet and you’ve got a shake in your hands.</p>
-<p><strong>Sick (CON):</strong> Something just isn’t right inside. Maybe you’ve got a disease or a wasting illness. Maybe you just drank too much ale last night and it’s coming back to haunt you.</p>
-<p><strong>Stunned (INT):</strong> That last knock to the head shook something loose. Brain not work so good.</p>
-<p><strong>Confused (WIS):</strong> Ears ringing. Vision blurred. You’re more than a little out of it.</p>
-<p><strong>Scarred (CHA):</strong> It may not be permanent, but for now you don’t look so good.</p>
-<p>Not every attack inflicts a debility—they’re most often associated with magic, poison, or stranger things like a vampire sucking your blood. Each debility is tied to an ability and gives you -1 to that ability’s modifier. The ability’s score is unaffected so you don’t have to worry about changing your maximum HP when you’re sick.</p>
-<p>You can only have each debility once. If you’re already Sick and something makes you Sick you just ignore it.</p>
-<p>Debilities are harder to heal than HP. Some high level magic can do it, sure, but your best bet is getting somewhere safe and spending a few days in a soft, warm bed. Of course, debilities are both descriptive and prescriptive: if something happens that would remove a debility, that debility is gone.</p>
-<p>Debilities don’t replace descriptions and using the established fiction. When someone loses an arm that doesn’t mean they’re Weak, it means they have one less arm. Don’t let debilities limit you. A specific disease can have whatever effects you can dream up. Sick is just a convenient shorthand for some anonymous fever picked up from a filthy rat.</p>
+<p class="NoIndent">
+	失去生命值代表著許多事情，它也許是感到疲累、受重擊瘀傷、或是遭到切砍等等。然而，有些創傷會造成更加沉重的影響，它們被稱做「異常狀態」。</p>
+<p><strong>虛弱 (力量):</strong> 你發揮不了多大的力氣。這或許是因為疲勞或重傷，也可能是因為力量被魔法汲取殆盡。</p>
+<p><strong>顫抖 (敏捷):</strong> 你的腳步不穩，雙手顫抖。</p>
+<p><strong>患病 (體質):</strong> 你感覺體內就是有些不對勁。或許是因為你感染疾病或某種慢性消耗症，也可能只是你昨晚喝了太多麥酒，而這麼做的報應終於回來纏上了你。</p>
+<p><strong>暈眩 (智力):</strong> 最近往腦袋敲的拿一下肯定把哪根螺絲打鬆了。你的大腦現在並不怎麼靈光。</p>
+<p><strong>困惑 (睿知):</strong> 耳鳴作響、視線模糊，你可遠遠不是只有稍微昏沉而已。</p>
+<p><strong>疤痕 (魅力):</strong> 它也許不會永久的，但至少你現在不怎麼好看。</p>
+<p>
+	並不是所有攻擊都會造成異常狀態──它們大部分會與魔法、毒藥、或其他更強大的事物有關（例如吸血鬼吸取了你的鮮血）。每種異常狀態都對應著一個屬性，且會使你對應的屬性調整值獲得-1的減值。屬性值本身並不會被影響，因此你不用擔心你的最大生命值會在你陷入患病狀態時被改變。</p>
+<p>
+	相同的異常狀態並不會疊加。如果你已經處於患病狀態，而又遭受到某個會讓你陷入患病狀態的情境時，則你只要無視就好。</p>
+<p>
+	與生命值相比，異常狀態更難被治癒。確實，有些高等級的魔法可以輕易做到這件事，但你最好的做法還是找個安全的地方，花上幾天在柔軟而溫暖的床鋪中度過。當然，除了機制層面的影響外，異常狀態也同樣具備敘事性：如果發生了某個能夠解除異常狀態的事件，那麼該異常狀態也將隨之終止。</p>
+<p>
+	異常狀態並不能拿來取代描述，且必須建立在已經被確定的情節上。若某個人失去了一條手臂，並不代表他們就會因此陷入虛弱的異常狀態，這僅僅意味著他們的手少了一隻。不要讓異常狀態侷限了你。一種特定的疾病可以造成任何你想要的效果，而不僅僅是使患者陷入患病狀態；患病狀態只是一個方便的速記，並可以用以表示某種骯髒老鼠所帶來的無名熱病。</p>
 <hr/>
 
 
