--- a/classes/bard/index.html
+++ b/classes/bard/index.html
@@ -115,8 +115,8 @@
 <p>沒有別人了。來吧。</p></div>
 <hr/>
 <h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>精靈</em>: Astrafel, Daelwyn, Feliana, Damarra, Sistranalle, Pendrell, Melliandre, Dagoliir</p> 
-<p class="NoIndent"><em>人類</em>: Baldric, Leena, Dunwick, Willem, Edwyn, Florian, Seraphine, Quorra, Charlotte, Lily, Ramonde, Cassandra</p></div>
+<div id="names"><p class="NoIndent"><em>精靈</em>: Astrafel, Daelwyn, Feliana, Damarra, Sistranalle, 潘卓爾(Pendrell), Melliandre, Dagoliir</p> 
+<p class="NoIndent"><em>人類</em>: Baldric, 莉娜(Leena), Dunwick, 威廉(Willem), Edwyn, Florian, Seraphine, Quorra, Charlotte, Lily, Ramonde, Cassandra</p></div>
 <hr/>
 <h2>外觀 (Look)</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
