--- a/classes/fighter/index.html
+++ b/classes/fighter/index.html
@@ -118,10 +118,10 @@
 <p>你即是銅牆鐵壁－－任憑所有撲向你的危險灰飛煙滅。最終，你會是站到最後的那一個。</p></div>
 <hr/>
 <h2>名稱 (Names)</h2>
-<div id="names"><p  class="NoIndent"><em>Dwarf</em>: Ozruk, Surtur, Brunhilda, Annika, Janos, Greta, Dim, Rundrig, Jarl, Xotoq</p>  
-<p class="NoIndent"><em>Elf</em>: Elohiir, Sharaseth, Hasrith, Shevaral, Cadeus, Eldar, Kithracet, Thelian</p>    
-<p class="NoIndent"><em>Halfling</em>: Finnegan, Olive, Randolph, Bartleby, Aubrey, Baldwin, Becca</p> 
-<p class="NoIndent"><em>Human</em>: Hawke, Rudiger, Gregor, Brianne, Walton, Castor, Shanna, Ajax, Hob</p></div>
+<div id="names"><p  class="NoIndent"><em>Dwarf</em>: 歐茲魯克(Ozruk), Surtur, Brunhilda, Annika, Janos, Greta, Dim, Rundrig, 賈爾(Jarl), 索圖庫(Xotoq)</p>  
+<p class="NoIndent"><em>Elf</em>: Elohiir, Sharaseth, Hasrith, Shevaral, 凱杜斯(Cadeus), Eldar, Kithracet, 緹里恩(Thelian)</p>    
+<p class="NoIndent"><em>Halfling</em>: Finnegan, Olive, Randolph, 巴特比(Bartleby), Aubrey, Baldwin, Becca</p> 
+<p class="NoIndent"><em>Human</em>: Hawke, Rudiger, 葛瑞格(Gregor), 布莉安娜(Brianne), Walton, Castor, Shanna, Ajax, Hob</p></div>
 <hr/>
 <h2>外觀 (Look)</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
