--- a/classes/paladin/index.html
+++ b/classes/paladin/index.html
@@ -118,7 +118,7 @@
 <p>敗者毋怨悽慘，對吧？</p></div>
 <hr/>
 <h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent">Thaddeus, Augustine, Lux, Cassius, Hadrian, Lucia, Octavia, Regulus, Valeria, Sanguinus, Titanius</p></div>
+<div id="names"><p class="NoIndent">Thaddeus, Augustine, 拉克絲(Lux), Cassius, 哈德良(Hadrian), Lucia, 奧塔薇雅(Octavia), Regulus, 薇拉莉雅(Valeria), Sanguinus, Titanius</p></div>
 <hr/>
 <h2>外觀 (Look)</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
