--- a/classes/ranger/index.html
+++ b/classes/ranger/index.html
@@ -117,8 +117,8 @@
 <p>沒有你，他們就會迷失。在鮮血與黑暗之中燒出通往前方的道路吧，神行客。</p></div>
 <hr/>
 <h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>Elf</em>: Throndir, Elrosine, Aranwe, Celion, Dambrath, Lanethe</p> 
-<p class="NoIndent"><em>Human</em>: Jonah, Halek, Brandon, Emory, Shrike, Nora, Diana</p></div>
+<div id="names"><p class="NoIndent"><em>Elf</em>: Throndir, Elrosine, 艾蘭威(Aranwe), Celion, Dambrath, Lanethe</p> 
+<p class="NoIndent"><em>Human</em>: Jonah, 哈利克(Halek), Brandon, 埃默里(Emory), Shrike, 諾拉(Nora), Diana</p></div>
 <hr/>
 <h2>外觀 (Look)</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
