--- a/classes/thief/index.html
+++ b/classes/thief/index.html
@@ -117,8 +117,8 @@
 <p>From your castle. Full of gold. You rogue.</p></div>
 <hr/>
 <h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>Halfling</em>: Felix, Rook, Mouse, Sketch, Trixie, Robin, Omar, Brynn, Bug</p>
-<p class="NoIndent"><em>Human</em>: Sparrow, Shank, Jack, Marlow, Dodge, Rat, Pox, Humble, Farley</p></div>
+<div id="names"><p class="NoIndent"><em>Halfling</em>: Felix, Rook, 小鼠(Mouse), Sketch, Trixie, Robin, 歐瑪爾(Omar), Brynn, Bug</p>
+<p class="NoIndent"><em>Human</em>: 雀兒(Sparrow), Shank, Jack, Marlow, Dodge, Rat, Pox, Humble, Farley</p></div>
 <hr/>
 <h2>外觀 (Look)</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
