--- a/classes/wizard/index.html
+++ b/classes/wizard/index.html
@@ -119,8 +119,8 @@
 <p>Yeah. We didn’t think so.</p></div>
 <hr/>
 <h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>Elf</em>: Galadiir, Fenfaril, Lilliastre, Phirosalle, Enkirash, Halwyr</p> 
-<p class="NoIndent"><em>Human</em>: Avon, Morgan, Rath, Ysolde, Ovid, Vitus, Aldara, Xeno, Uri</p></div>
+<div id="names"><p class="NoIndent"><em>Elf</em>: Galadiir, 芬法里爾(Fenfaril), Lilliastre, Phirosalle, Enkirash, Halwyr</p> 
+<p class="NoIndent"><em>Human</em>: 亞文(Avon), Morgan, 拉瑟(Rath), Ysolde, Ovid, 維特(Vitus), Aldara, Xeno, Uri</p></div>
 <hr/>
 <h2>外觀 (Look)</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
@@ -140,14 +140,14 @@
 <div class="Move"><h3 class="MoveName">Human</h3>
 <p class="NoIndent">Choose one cleric spell. You can cast it as if it was a wizard spell.</p></div></div>
 <div id="classmoves"><p class="Instructions">You start with these moves:</p>
-<div class="Move"><h3 class="BasicMoveName">Spellbook</h3>
+<div class="Move"><h3 class="BasicMoveName">法術書 (Spellbook)</h3>
 <p class="NoIndent">You have mastered several spells and inscribed them in your spellbook. You start out with three first level spells in your spellbook as well as the cantrips. Whenever you gain a level, you add a new spell of your level or lower to your spellbook. You spellbook is 1 weight.</p></div>
-<div class="Move"><h3 class="BasicMoveName">Prepare Spells</h3>
+<div class="Move"><h3 class="BasicMoveName">準備法術 (Prepare Spells)</h3>
 <p class="NoIndent">When you <strong>spend uninterrupted time (an hour or so) in quiet contemplation of your spellbook</strong>, you:</p>
 <ul><li>Lose any spells you already have prepared</li>
 <li>Prepare new spells of your choice from your spellbook whose total levels don’t exceed your own level+1.</li>
 <li>Prepare your cantrips which never count against your limit.</li></ul></div>
-<div class="Move"><h3 class="BasicMoveName">Cast a Spell (Int)</h3>
+<div class="Move"><h3 class="BasicMoveName">施放法術(智力) (Cast a Spell)</h3>
 <p class="NoIndent">When you <strong>release a spell you’ve prepared</strong>, roll+Int. ✴On a 10+, the spell is successfully cast and you do not forget the spell—you may cast it again later. ✴On a 7-9, the spell is cast, but choose one:</p>
 <ul><li>You draw unwelcome attention or put yourself in a spot. The GM will tell you how.</li>
 <li>The spell disturbs the fabric of reality as it is cast—take -1 ongoing to cast a spell until the next time you Prepare Spells.</li>
