--- a/moves_discussion/index.html
+++ b/moves_discussion/index.html
@@ -380,7 +380,7 @@
 <div class="Example">
 <p class="ExampleDialogueFirstLine">GM: 歐茲魯克，你獨自浴血站立在一群憤怒的地獄獵犬面前，雷司西亞的王子蜷縮在你身後，在恐懼中哭叫。</p>
 <p class="ExampleDialogue">歐茲魯克: 我屹立不搖，高舉我的盾牌。即使注定一死，我仍會履行我的使命，<b>保衛</b>年幼的王子殿下。</p>
-<p class="ExampleDialogue">艾榮威: 我從陰影中躍起，抽出我的利劍！「死亡可還沒注定呢，臭矮人！」，我站在他身旁。我打算協助他保衛的動作。「雖然我不怎麼了解你，但我們曾在戰場中相識。歐茲魯克，如果我們今日要死在這裡，至少我們要如兄弟般一同死去！」，雖然我沒有任何對他的羈絆，但我還是想嘗試看看。</p>
+<p class="ExampleDialogue">艾蘭威: 我從陰影中躍起，抽出我的利劍！「死亡可還沒注定呢，臭矮人！」，我站在他身旁。我打算協助他保衛的動作。「雖然我不怎麼了解你，但我們曾在戰場中相識。歐茲魯克，如果我們今日要死在這裡，至少我們要如兄弟般一同死去！」，雖然我沒有任何對他的羈絆，但我還是想嘗試看看。</p>
 <p class="ExampleDialogueLastLine">GM: 令人感動，真的。好，請擲+0，如果你成功的話，歐茲魯克將在保衛的嘗試上獲得+1。來吧！</p>
 </div>
 <hr/>
