--- a/classes/cleric/index.html
+++ b/classes/cleric/index.html
@@ -116,8 +116,8 @@
 <p>向這個世界證明，誰才是它的主宰。</p></div>
 <hr/>
 <h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>Dwarf</em>: Durga, Aelfar, Gerda, Rurgosh, Bjorn, Drummond, Helga, Siggrun, Freya</p>
-<p class="NoIndent"><em>Human</em>: Wesley, Brinton, Jon, Sara, Hawthorn, Elise, Clarke, Lenore, Piotr, Dahlia, Carmine</p></div>
+<div id="names"><p class="NoIndent"><em>Dwarf</em>: 杜嘉(Durga), Aelfar, Gerda, Rurgosh, Bjorn, Drummond, Helga, Siggrun, Freya</p>
+<p class="NoIndent"><em>Human</em>: 衛斯理(Wesley), Brinton, Jon, Sara, Hawthorn, Elise, Clarke, Lenore, Piotr, Dahlia, Carmine</p></div>
 <hr/>
 <h2>外觀 (Look)</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
@@ -154,7 +154,7 @@
 <p class="NoIndent">When you <strong>petition your deity according to the precept of your religion</strong>, you are granted some useful knowledge or boon related to your deity’s domain. The GM will tell you what.</p></div></div>
 <div class="Move"><div id="TurnUndead"><h3 class="BasicMoveName">Turn Undead</h3>
 <p class="NoIndent">When you <strong>hold your holy symbol aloft and call on your deity for protection</strong>, roll+Wis. ✴On a 7+, so long as you continue to pray and brandish your holy symbol, no undead may come within reach of you. ✴On a 10+, you also momentarily daze intelligent undead and cause mindless undead to flee. Aggression breaks the effects and they are able to act as normal. Intelligent undead may still find ways to harry you from afar. They’re clever like that.</p></div></div>
-<div class="Move"><div id="Commune"><h3 class="BasicMoveName">Commune</h3>
+<div class="Move"><div id="Commune"><h3 class="BasicMoveName">通神 (Commune)</h3>
 <p class="NoIndent">When you <strong>spend uninterrupted time (an hour or so) in quiet communion with your deity</strong>, you:</p>
 <ul><li>Lose any spells already granted to you.</li>
 <li>Are granted new spells of your choice whose total levels don’t exceed your own level+1, and none of which is a higher level than your own level.</li>
