--- a/equipment/index.html
+++ b/equipment/index.html
@@ -286,26 +286,43 @@
 <p class="Item">一件歐克酋長的贈物	<span class="Tags">250 金幣</span></p>
 <p class="Item">一條巨龍囤積起來的金銀珠寶	<span class="Tags">130,000 金幣</span></p>
 <hr/>
+
 <h1>魔法物品</h1>
-<p class="NoIndent">There are stranger things in the world than swords and leather. Magic items are the non-mundane items that have intrinsic power.</p>
-<p>Magic items are for you to make for your game. Players can make magic items through the wizard’s ritual and similar moves. The GM can introduce magic items in the spoils of battle or the rewards for jobs and quests. This list provides some ideas, but magic items are ultimately for you to decide.</p>
-<p>When making your own magic items keep in mind that these items are <em>magical</em>. Simple modifiers, like+1 damage, are the realm of the mundane—magic items should provide more interesting bonuses.</p>
+<p class="NoIndent">
+	這個世界上存在著遠比刀劍革甲更加奇妙的事物。魔法物品，正是這類內部蘊含著神奇力量的非凡之物。</p>
+<p>
+	魔法物品是為了讓你創造屬於你自己的遊戲而存在的。玩家可以透過進行法師的<b>儀式</b>或其他類似動作來製造魔法物品。GM也可以將魔法物品做為戰利品或任務獎勵導入遊戲之中。下方的列表中僅僅是用來提供一些靈感，實際上魔法物品的效果與樣貌最終仍是由你來決定。</p>
+<p>
+	當製造你自己的魔法物品時，記住這些物品是<em>充滿魔法的</em>。單純的加減值，例如 +1 傷害，仍只是凡物的領域──魔法物品應該要能帶來更多更有趣的加成。</p>
+
 <div class="Move">
-<p class="MagicItem">Argo-Thaan, Holy Avenger	<span class="Tags">近身, 2 重量</span></p>
-<p class="NoIndent">There are many swords in this world, but there is only one Argo-thaan. It is a blade of gold, silver and light, revered as a holy relic by all orders and religions for whom Good rings true. Its touch is a blessing and to many, the sight of it brings tears of joy.</p>
-<p>In the hands of a paladin, it strikes true and strong. A paladin wielding it increases their damage die to d12 and has access to every paladin move. As well, Argo-thaan can harm any creature of Evil, regardless of any defenses it may have. No Evil creature may touch it without suffering agony. In the hands of any non-paladin, it is merely a sword, heavier and more cumbersome than most—it gains the awkward tag.</p>
-<p>Argo-thaan, while not intelligent, will forever be drawn to a cause of true Good, like iron to a magnet.</p></div>
-<div class="Move"><p class="MagicItem">黃泉之箭 (Arrows of Acheron)	<span class="Tags">1 彈藥, 1 重量</span></p>
-<p class="NoIndent">由一名盲眼製箭師在黑暗中所打造，這些箭矢能夠在最深沉的黑暗中找到它們的目標。弓箭手可以在失明、黑暗中、被厚重布料遮住雙眼時射出這些箭矢，而仍能保證精準命中目標。然而，倘若日光照到了這些箭矢上，它們將如陰影和塵土般消散。</p></div>
-<div class="Move"><p class="MagicItem">征服王之斧 (Axe of the Conqueror-King)	<span class="Tags">近身, 1 重量</span></p>
-<p class="NoIndent">It is crafted of shining steel, glowing with a golden light and imbued with mythical powers of authority. When you bear the axe, you become a beacon of inspiration to all you lead. Any hirelings in your employ have +1 Loyalty, no matter the quality of your leadership.</p></div>
+	<p class="MagicItem">阿爾戈-坦恩, 神聖復仇者 (Argo-Thaan, Holy Avenger)	<span class="Tags">近身, 2 重量</span></p>
+<p class="NoIndent">
+	儘管這個世界上有著種種寶劍，但阿爾戈-坦恩僅此一把。它是黃金、白銀、和光明之刃，被所有將善良視為真理的教團和宗教尊為聖物。它的觸碰是一種祝福，而對許多人來說，僅僅看見它就會流下喜悅的淚水。</p>
+<p>
+	當被握在聖武士的手中，它將能造成強而有力的打擊。持用它的聖騎士將使自己的傷害骰提升至 d12，且能夠使用所有的聖騎士動作。同時，阿爾戈-坦恩能夠傷害任何邪惡的生物，無論它披上了任何防護都一樣。沒有任何邪惡生物能夠觸碰阿爾戈-坦恩而不承受劇烈痛苦。在任何聖武士以外的人手中，它就僅僅是一把普通的長劍，且比大部分的長劍都來得更沉重累贅──它將因此獲得<tag>不便</tag>標籤。</p>
+<p>
+	儘管阿爾戈-坦恩並不具備智能，但它永遠會被真正的善良所吸引，就彷彿鋼鐵被磁鐵所吸引一樣。</p></div>
+
+<div class="Move">
+	<p class="MagicItem">黃泉之箭 (Arrows of Acheron)	<span class="Tags">1 彈藥, 1 重量</span></p>
+<p class="NoIndent">
+	由一名盲眼製箭師在黑暗中所打造，這些箭矢能夠在最深沉的黑暗中找到它們的目標。弓箭手可以在失明、黑暗中、被厚重布料遮住雙眼時射出這些箭矢，而仍能保證精準命中目標。然而，倘若日光照到了這些箭矢上，它們將如陰影和塵土般消散。</p></div>
+
+<div class="Move">
+	<p class="MagicItem">征服王之斧 (Axe of the Conqueror-King)	<span class="Tags">近身, 1 重量</span></p>
+<p class="NoIndent">
+	它由閃耀精鋼打造而成，散發著金黃色的光芒，且被灌注了象徵威權的神秘力量。當你帶著這柄斧頭時，你將成為能夠激勵你率領部下的明燈。無論你的領導能力如何，所有你所雇傭的僱工都將獲得+1忠誠度。</p></div>
+
 <div class="Move"><p class="MagicItem">Barb of the Black Gate	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">A nail or spike, twisted and forever cold, said to have been pried from the Gates of Death. When hammered into a corpse, it disappears and ensures that corpse will never be risen again—no magic short of that of Death himself can reignite the flame of life (natural or otherwise) in the body.</p></div>
+
 <div class="Move"><p class="MagicItem">次元袋 (Bag of Holding)	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">A bag of holding is larger on the inside than the outside, it can contain an infinite number of items, and its weight never increases. When you try to retrieve an item from a bag of holding, roll+WIS. ✴On a 10+, it’s right there. ✴On a 7-9, choose one:</p>
 <ul><li>You get the exact item, but it takes a while</li>
 <li>You get a similar item of the GM’s choice, but it only takes a moment</li></ul>
 <p class="NoIndent">No matter how many items it contains, a bag of holding is always 0 weight.</p></div>
+
 <div class="Move"><p class="MagicItem">燃燒車輪 (The Burning Wheel)	<span class="Tags">2 重量</span></p>
 <p class="NoIndent">An ancient wooden wheel, as might appear on a war-wagon, banded with steel. On a glance, it appears to be nothing special—many spokes are shattered and the thing seems mundane. Under the scrutiny of magic or the eyes of an expert, its true nature is revealed: the Burning Wheel is a gift from the God of Fire and burns with his authority.</p>
 <p>When you hold The Burning Wheel and speak a god’s name, roll+CON. ✴On a 7+, the god you name takes notice and grants you an audience. An audience with a god is not without a price: on a 10+, you choose one of your stats and reduce it to the next lowest modifier (for example, a 14 is +1, so it would be reduced to 12, a +0). ✴On a 7–9, the GM chooses which stat to reduce.</p>
@@ -363,8 +380,12 @@
 <p class="NoIndent">This key unlocks any door for you, provided you don’t belong where you intend to go. So long as you do nothing that would alert another to your presence (remaining unheard, unseen and unnoticed) and takes nothing more than your memories out with you, the key’s magic will prevent your intrusion from ever being discovered. It’s like you were never there at all.</p></div>
 <div class="Move"><p class="MagicItem">Sacred Herbs	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">The sacred herbs, collected and prepared by an order of lost wizard-monks, can be found in bundles with two or three uses to them. Kept dry, they last indefinitely. When smoked in a pipe or consumed in an incense burner and the thick, blue smoke inhaled, these herbs will grant you strange visions of faraway places and distant times. If you focus your will on a particular person, place or thing, the herbs will respond: roll+WIS. ✴On a 10+, the vision is clear and useful—yielding some valid information. ✴On a 7–9, the vision is about the thing desired, but is unclear, fraught with metaphor or somehow difficult to understand. ✴On a miss, the GM will ask you, “What is it you fear most?” You must answer honestly, of course.</p></div>
-<div class="Move"><p class="MagicItem">The Sartar Duck	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">An odd, hand-carved wooden duck. Who would make such a funny thing? While you bear it, you find yourself an exceptionally gifted storyteller—no matter the language, you can make yourself and your story clear to any audience. They will understand your meaning, if not your words.</p></div>
+
+<div class="Move">
+	<p class="MagicItem">薩塔爾說書鴨鴨 (The Sartar Duck)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	一隻手工雕刻而成的奇怪木製鴨子。到底是誰會做出這種有趣的玩意兒？當你帶著它時，你將發現自己變成了一名天賦異稟的說書人──不管使用什麼語言，你都能讓任何聽眾清楚明白的理解你和你所述說的故事。即使他們聽不懂你的話，也能明白你的意思。</p></div>
+
 <div class="Move"><p class="MagicItem">Tears of Annalise	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">Cloudy red gemstones the size of a thumbnail, the Tears of Annalise are always found in pairs. When swallowed by two different people, they bind the swallowers together—when either feels strong emotions (particularly sadness, loss, fear or desire) the other feels it, as well. The effects last until one spills the blood of the other.</p></div>
 <div class="Move"><p class="MagicItem">Teleportation Room	<span class="Tags">緩慢</span></p>
