--- a/playing_the_game/index.html
+++ b/playing_the_game/index.html
@@ -564,30 +564,48 @@
 <p>這聽起來或許殘酷，當然，但實際上並沒有那麼糟糕。你們有鋼鎧鐵刃、純熟技巧、以其神妙法術。如果你們能團結一心，保持頭腦清醒，你們就能活下來！大概。</p>
 
 <h3>怪物</h3>
-<p class="NoIndent">The beasts and worse that fill dungeons? We call them monsters.</p>
-<p>Not all of them appear monstrous. Sometimes it’s just a guy in some armor—no horns, flames, or wings, nothing. But when that guy wants to kill you, well, he’s as much a monster as the rest.</p>
-<p>Some don’t even need arms and armor. A wily warlock or nefarious noble can stab you in the back a dozen times with a word or two. Be wary of anyone who can stroll around a dungeon with nothing but a robe and a staff: there’s a reason they don’t need a shell of steel.</p>
-<p>When it comes to fighting monsters, it’s an even bet: your life versus theirs. You should know that going into it. If you can avoid it, never fight with even odds. Unless you have the advantage you’re probably better off working to gain that advantage than betting your life on a fight. Find their weaknesses, pad your advantages, and you’ll live long enough to enjoy the spoils.</p>
-<p>Fights often mean triggering moves like hack and slash, defend, or volley. Defy danger comes up pretty often too, and class moves like cast a spell. The best fight for you is one where you have the drop—since hack and slash is triggered by attacking in melee, and a defenseless enemy isn’t really in melee, the move won’t trigger—you’ll just bury a weapon or spell in their back and deal your damage.</p>
-<p>Monsters generally fall into a few types. Humanoids are more or less like you—orcs, goblins, and so on. Beasts are animals, but not so docile as Bessie the cow: think foot-long horns and acid sacs. Constructs are crafted life. Planar monsters come from beyond this world, from places only dreamed of. The undead might be the worst of all: that which is dead is damn hard to kill again.</p>
-<p>When you find yourself in a fight with a monster you have a few different tricks up your sleeve that can help you survive. If the monster’s something you might know about, you could consult your knowledge and spout lore. It never hurts to take a minute to look around and discern realities, too—there might be something helpful nearby that you missed. Make sure you understand your class moves and how they can help you, too. You never know when a move might come in handy in a new way.</p>
+<p class="NoIndent">
+	那些盤據在地城中的野獸和更壞更惡劣的存在？我們把它們統稱為「怪物」。</p>
+<p>
+	牠們並不全都長得一副怪物般的醜樣。有時候，他或許就只是個穿著盔甲的普通人──沒有角、火焰、翅膀，什麼都沒有。但當這個傢伙想要殺你的時候，嘿，那他就成為了跟其他傢伙一樣的怪物。</p>
+<p>
+	其中有些人甚至不需要武器或鎧甲。一名狡猾的魔導師或窮凶極惡的貴族僅需要一兩句話就能往你背後捅上好幾刀。小心那些僅憑長袍和法杖就在地城中遊走的人物：他們不需要鋼鐵盔甲的肯定有著其他原因。</p>
+<p>
+	說到與怪物交戰，這可以說是一場公平對等的賭注：你的性命，對上牠們的性命。你應該要清楚知道這一點。能避免的話就絕對不要在勝敗機會相同的條件下戰鬥。除非你已經佔據優勢，否則你最好還是努力奪下優勢，盡可能提高自己的勝率，而不是將自己的性命押在無常的戰鬥中。找出牠們的弱點，完善你的優勢，這樣你才能活下來享受應得的戰利品。</p>
+<p>
+	戰鬥經常意味著觸發像是<b>砍劈</b>、<b>保衛</b>、或<b>射擊</b>之類的動作。同樣的，<b>面對危險</b>動作，以及像是<b>施放法術</b>這類的職業動作也經常會被使用。對你而言，最理想的戰鬥情境應該是對那些沒有準備的目標先發制人──由於<b>砍劈</b>動作是在近戰肉搏的情境下被觸發，而一名毫無防備的敵人可沒有辦法真的進行肉搏戰──你將能直接揮舞武器或法術砍進牠們的背後，並對牠們造成傷害。</p>
+<p>
+	怪物大致上被分成了幾個種類。類人生物與你多少有些相似──獸人、哥布林等就屬於此類。野獸就是些尋常動物，但牠們可不像你老家的乳牛貝西那麼溫順：想想那些長達一呎的犄角和惡臭的酸囊，牠們就是這麼可怕。構裝體是那些被製作出來的生命體。異位面怪物來自這個世界之外，來自那些只在夢中會出現的遙遠之境。不死生物可能是所有怪物中最糟糕的類型：要再殺死一次這些早已死去的存在可不容易。</p>
+<p>
+	當你發現自己必須與怪物戰鬥的時候，知曉一些不同的錦囊妙計可以幫助你活下來。如果這頭怪物是某個你可能知道的生物，你可以回憶自己累積下來的知識，並進行<b>憶述見聞</b>。花點時間仔細觀察周遭並<b>審視現狀</b>永遠不會有什麼壞處──誰知道你會不會錯過某個能帶來幫助的情報呢。確保你清楚理解自己的職業動作以及它們如何幫助你。你永遠不會知道這個動作會在什麼時候以另外一種意想不到的方式派上用場。</p>
 
-<h3>荒野 (Wilderness)</h3>
-<p class="NoIndent">There’s dungeons, there’s civilization, and there’s all the stuff in-between: the wilderness. The line between a forest and a dungeon is thinner than you might think—have you ever been lost in the night and surrounded by wolves?</p>
-<p>Journeys by road are easy. When you’ve got a trail to follow and some modicum of protection you’re not even making moves—you just consume some rations on the way and make it to your destination. If it’s a perilous journey though…</p>
-<p>On a perilous journey you’ll need a trailblazer, a scout, and a quartermaster. That means you’ll probably want at least three people when you’re traveling in dangerous areas. Fewer than three and you’ll be neglecting something—that’s an invitation for trouble.</p>
+<h3>荒野</h3>
+<p class="NoIndent">
+	危險的地城，繁盛安穩的文明之地，以及介於兩者之間的一切：荒野。有時候，森林和地城之間的界線比你想像的還要模糊──你是否曾在夜晚中迷失方向，並在群狼環繞中顫抖？</p>
+<p>
+	踏著大道前進的旅程可說相當容易。當你只需要沿著道路前進，並準備了一些防禦措施，那麼你甚至不需要進行動作──你們只需要在旅途中消耗一些口糧，並直接抵達目的地即可。然而，若這一趟將會是一場危險旅途……</p>
+<p>
+	當你們<b>踏上危險旅途</b>，你們將會需要一名領路人、一名斥候、和一名軍需官來照應路上的需求。這意味著若你們打算旅經危險區域，你們可能會希望集結至少三個成員。一旦人數少於三人，你們就無可避免地會在旅途中有所疏忽──而這無疑是在向麻煩招手！</p>
 
-<h3>朋友和敵人 (Friends and Enemies)</h3>
-<p class="NoIndent">You’re an adventurer, so people will pay attention to you. Not all of that attention is going to be positive. You’ll find that, especially once you’re laden down with ancient treasure, all manner of hangers-on will appear from the woodwork.</p>
-<p>Sure, you can get leverage on these people and parley them to get what you want, but the way to build a lasting connection is to do right by them. Forcing Duke Alhoro to give you a castle in return for his daughter will get you the land, but the reputation that comes along with your shady dealing won’t do you many favors. Coercion isn’t mind control, so play it nice if you want to make friends.</p>
-<p>Magic, though, that just might be mind control. The morality of it’s debatable but you can bend someone to your will if you don’t mind tossing their free will in the corner.</p>
-<p>It’s worth keeping track of who’s got your back and who’d sooner stab you in it. The GM will be doing the same, and the worst enemy is the one you don’t know. You’re not the only ones in Dungeon World with grand designs.</p>
-<p>While you live the adventurer’s life, with no fixed address to give, other folks are likely to be more settled. Knowing where the blacksmith is that does the best work, or which town’s inns will put you up free of charge, is a fine thing indeed.</p>
-<p>Keep in mind that not all power is physical. Even if you could take down King Arlon in a fight you’ll just be inviting retribution from his kin, allies, and court. Station is its own kind of power apart from magic and might.</p>
+<h3>朋友和敵人</h3>
+<p class="NoIndent">
+	你是一名冒險者，因此人們會關注你的所作所為。並不是所有的關注都是正面的。你會發現，特別是當你們滿載遠古寶藏，衣錦環鄉之時，各種各樣諂媚奉迎的跟班都將從酒館中冒出，環繞在你身邊。</p>
+<p>
+	當然，你可以利用這些人，與他們<b>談判</b>以獲得你想要的事物，然而若你打算與他們建立長久的關係，那麼你該做的事是好好地善待他們。強迫阿爾荷羅公爵賜給你一棟城堡以換回他的寶貝女兒或許確實能讓你得到一塊封地，但伴隨著這項不正當交易的壞名聲可不會帶給你什麼好處。強迫並不是精神控制，所以如果你想結交朋友，就別耍小聰明，好好表現吧。</p>
+<p>
+	然而魔法，確實有可能做到精神控制。儘管這種行為的道德是有爭議性的，但如果你不介意把他人的自由意志踢到角落，那你大可利用魔法讓他們屈服於你的意志之下。</p>
+<p>
+	知道有誰會在背後支持你，又有誰遲早會在你背後捅刀是很有必要的。GM同樣會將這些人際關係記錄下來，而要知道，你最大的敵人往往是那些你不知道的傢伙。你可不是地城世界中唯一被精心設計的造物。</p>
+<p>
+	當你們冒險者過著居無定所、四處遊歷的生活時，其他居民則可能過著更加安定的人生。如果能知道哪個鎮上的鐵匠有著最好的手藝、或是哪間旅店願意為你們提供免費的食宿，這無疑是一件好事。</p>
+<p>
+	要記住，並非所有力量都是有形的。就算你能夠在一場戰鬥中擊敗國王亞倫，你也只會招致他親屬、盟友、和整個宮廷的報復。除了魔法和蠻力之外，身分地位本身也是一種不可忽視的力量。</p>
 
-<h3>世界 (The World)</h3>
-<p class="NoIndent">You’re an adventurer; you’re a big deal. But there are other forces at work too. The world will go on without you. If you don’t deal with the goblin infestation in the sewers maybe someone else will. Or maybe the goblins will take over the city. Do you really want to find out?</p>
-<p>A world in motion is a world waiting to be changed. Your choices of who to kill (or not), where to go, what bargains to make—it all changes the world you’re in. Changing the world requires acting on it—making moves and pursuing treasure and exploration. Change comes in many forms, including XP used to level up and gain new abilities. Those abilities are then used to go back out into the world and stir things up. It’s a cycle of change and growth for both you and the world you live in.</p>
+<h3>世界</h3>
+<p class="NoIndent">
+	你是一名冒險者；你確實是個大人物，但這個世界上還有其他勢力在運作。就算沒有你們，這個世界仍會照常運轉。如果你們不去對付那些在下水道肆虐的哥布林，或許會有其他人去做、也可能哥布林將就此佔領整座城市。你真的想確認會發生什麼事嗎？</p>
+<p>
+	這是個動態的世界，也是個隨時等待被你們改變的世界。你們將選擇要殺誰（或者不殺誰）、要去什麼地方、要做什麼交易──這一切都會影響你所身處的這個世界。你需要採取行動才能改變這個世界──進行動作、追求財寶、並探索這個世界吧。改變有許多種形式，包括使用經驗值升級並獲得新的能力。這些能力將接著被使用來影響這個世界，把事情攪亂。對你和你所生活的這個世界而言，這一切的一切都是個不斷造成改變並成長的循環。</p>
 
           </div>
        </div>
